fix: Redesign of the terminal component and change input to textare for dynamic hight adjustment Uncomment the interactable part of the terminal. Still needs to be worked on TODO: The expand/collapse button on the terminal component

--- a/src/frontend/styles/components/command-palette.styl
+++ b/src/frontend/styles/components/command-palette.styl
@@ -18,6 +18,9 @@
   border-radius: 8px
   outline: 4px solid COMMAND_BORDERS_COLOR
 
+  .agent-com
+    max-height: 40vh
+
   input
     width: 100% !important
     margin-left: 0px !important
@@ -153,148 +156,3 @@
 
 .command-program-search-result-line
   font-weight: normal
-
-.agent-buttons-container
-  display: flex
-  justify-content: space-between
-  margin-top: 8px
-  align-items: center
-
-  .agent-button
-    display: flex
-    cursor: pointer
-    border: 1px solid DEBUG_BUTTON_ACTIVE_BACKGROUND
-    padding: 4px
-    align-items: center
-    border-radius: 6px
-    padding-right: 8px
-    white-space: nowrap
-    height: 28px
-    margin-right: 6px
-
-    .add-file-img
-      background-image: COMMAND_PALETTE_ADD_FILE_IMG
-      background-size: 10px, 16px
-      background-position: center
-      background-repeat: no-repeat
-      width: 24px
-      height: 24px
-      margin-right: 4px
-
-  .agent-model-select
-    width: -webkit-fill-available
-    display: flex
-    justify-content: space-between
-    padding-right: 0px !important
-
-  .agent-model-img
-    height: 24px
-    min-width: 24px
-    background-image: COMMAND_PALETTE_ARROW_IMG
-    background-repeat: no-repeat
-    background-size: 9px, 6px
-    background-position: center
-
-  .agent-enter
-    height: 24px
-    min-width: 24px
-    border-radius: 6px
-    background: #0E7490
-    background-image: COMMAND_PALETTE_ENTER_MSG_IMG
-    background-repeat: no-repeat
-    background-size: 14px
-    background-position: center
-    cursor: pointer
-
-.agent-com
-  max-height: 40vh
-  overflow-y: auto
-  margin-bottom: 8px
-
-.user-img
-  height: 24px
-  width: 24px
-  background-image: COMMAND_PALETTE_USER_IMG
-  background-size: 16px, 16px
-  background-position: center
-  background-repeat: no-repeat
-
-.header-wrapper
-  display: flex
-  justify-content: space-between
-
-.content-header
-  display: flex
-  align-items: center
-
-.user-msg
-  border-radius: 6px
-  background: #3A3A3A
-  color: #A5F3FC
-  padding: 8px
-  margin-bottom: 8px
-
-.user-name
-  margin-left: 4px
-  margin-right: 4px
-
-.ai-msg
-  padding: 8px
-  margin-bottom: 8px
-
-.msg-content
-  padding: 8px
-  display: flex
-  flex-direction: column
-
-.ai-img
-  height: 24px
-  width: 24px
-  background-image: COMMAND_PALETTE_AI_IMG
-  background-size: 24px, 24px
-  background-position: center
-  background-repeat: no-repeat
-
-.ai-name
-  color: #C7D2FE
-  margin-left: 4px
-  margin-right: 4px
-
-.command-palette-copy-button
-  height: 24px
-  width: 24px
-  cursor: pointer
-  background-image: COMMAND_PALETTE_COPY_IMG
-  background-size: 17px, 17px
-  background-position: center
-  background-repeat: no-repeat
-
-.command-palette-upload-button
-  height: 24px
-  width: 24px
-  cursor: pointer
-  background-image: COMMAND_PALETTE_UPLOAD_IMG
-  background-size: 17px, 16px
-  background-position: center
-  background-repeat: no-repeat
-
-.command-palette-redo-button
-  height: 24px
-  width: 24px
-  cursor: pointer
-  background-image: COMMAND_PALETTE_REDO_IMG
-  background-size: 17px, 15px
-  background-position: center
-  background-repeat: no-repeat
-
-.command-palette-edit-button
-  height: 24px
-  width: 24px
-  cursor: pointer
-  background-image: COMMAND_PALETTE_EDIT_IMG
-  background-size: 17px, 17px
-  background-position: center
-  background-repeat: no-repeat
-
-.msg-controls
-  display: flex
